--- a/styles.css
+++ b/styles.css
@@ -64,8 +64,12 @@ body, html{
 }
 
 #inputScreen{
+    display: flex;
+    align-items: center;
+    font-size: 40px;
+    padding: 7px;
     background-color: rgb(174, 180, 184);
-    width: 350px;
+    width: 360px;
     height: 75px;
     align-self: center;
     border-style: solid;
@@ -81,7 +85,7 @@ body, html{
     justify-content: space-between;
 }
 
-#numberBtn, #equals{
+.numberBtn, #equals{
     margin-top: 30px;
     height: 50px;
     width: 100px;
